Supports setting a texture directory
git-svn-id: http://jmonkeyengine.googlecode.com/svn/trunk@1227 75d07b2b-3a1a-0410-a2c5-0572b91ccdca